switch to vue files and change project structure

--- a/index.html
+++ b/index.html
@@ -6,61 +6,10 @@
 </head>
 <body>
   <div id="app">
-    <div class="sidebar">
-      <div class="sidebar-header">
-        {{ characters[0] }}
-      </div>
-      <div class="sidebar-row"
-        v-for="(move, name, index) in getCharacterMoves(0)"
-        draggable="true"
-        :class="{'sidebar-dark': index % 2 == 0, 'sidebar-light': !(index % 2 == 0)}">
-        <span> {{ name }} </span>
-        <div style="float:right; display:inline-block;">
-          <div class="sidebar-row-framedata startup"><span class="center-span">{{ move.startup }}</span></div><div class="sidebar-row-framedata active"><span class="center-span">{{ move.total_active }}</span></div><div class="sidebar-row-framedata recovery"><span class="center-span">{{ move.recovery }}</span></div>
-        </div>
-      </div>
-    </div>
-    <div class="timeline">
-      <div class="header-col">
-        <div class="header-row"></div>
-        <div class="header-row">
-          <span> {{ characters[0] }} </span>
-        </div>
-        <div class="header-row">
-          <span> -------------------- </span>
-        </div>
-        <div class="header-row">
-          <span> {{ characters[1] }} </span>
-        </div>
-        <div class="header-row"></div>
-      </div>
-      <div class="frame-col" v-for="frame in frameData[0].length">
-        <div class="frame-row">
-          <span v-if="actions[0][frame-1]"> {{actions[0][frame-1]}} </span>
-        </div>
-        <div class="frame-row">
-          <frame-indicator :top=true :frame-type="frameData[0][frame - 1]"></frame-indicator>
-        </div>
-        <div class="frame-row">
-          <span>{{ frame }}</span>
-        </div>
-        <div class="frame-row">
-          <frame-indicator :top=false :frame-type="frameData[1][frame - 1]"></frame-indicator>
-        </div>
-        <div class="frame-row">
-          <span v-if="actions[1][frame-1]"> {{actions[1][frame-1]}} </span>
-        </div>
-      </div>
-    </div>
   </div>
 </body>
 
 <link href="https://fonts.googleapis.com/css?family=Mukta+Mahee" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="styles.css">
-
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="characters.js"></script>
-<script src="rules.js"></script>
-<script src="app.js"></script>
-<script src="tests.js"></script>
+<script src="dist/build.js"></script>
 </html>
