CSS fadein/fadeout transitions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </body>
 
 <link href="https://fonts.googleapis.com/css?family=Mukta+Mahee" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="src/styles/styles.css">
+<link rel="stylesheet" type="text/css" href="src/styles/animation.css">
 <script src="dist/build.js"></script>
 </html>
